--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
-  go_router: ^13.1.0
-  provider: ^6.1.2
+  go_router: ^15.1.2
+  provider: ^6.1.5
   cupertino_icons: ^1.0.8
-  http: ^0.13.6
-  flutter_form_builder: ^9.1.2
+  http: ^1.4.0
+  flutter_form_builder: ^10.0.1
   form_builder_validators: ^11.1.2
-  email_validator: ^2.1.17
+  email_validator: ^3.0.0
   shared_preferences: ^2.2.2
   intl: ^0.19.0
 
